# LiteRT.NET

./: .gitignore  AGENTS.md  Directory.Build.props  LiteRT.NET.slnx  README.md
.github/workflows/: build-natives.yml  ci.yml  release-unity.yml
docs/: gpu-accelerator-probe-order.md  openupm-publishing.md
examples/: README.md
examples/MinimalInference/: MinimalInference.csproj  Program.cs
examples/MinimalInferenceUnity/: .gitignore
examples/MinimalInferenceUnity/Assets/: NuGet.config  packages.config
examples/MinimalInferenceUnity/Assets/Scenes/: SampleScene.unity
examples/MinimalInferenceUnity/Assets/Scripts/: LiteRT.Examples.asmdef  MinimalInferenceBehaviour.cs
examples/MinimalInferenceUnity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
examples/MinimalInferenceUnity/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
examples/SimpleChat/: Program.cs  SimpleChat.csproj
examples/SimpleLlm/: Program.cs  SimpleLlm.csproj
native/: fetch-natives.sh
scripts/: fetch-natives.sh  make-ios-xcframework.sh  sync-unity-bindings.sh  sync-unity-natives.sh
scripts/litert-lm-c/: BUILD.bazel  Info.plist  build.sh  exported_symbols.lds
src/LiteRT/: AssemblyInfo.cs  LiteRT.csproj  LiteRtCompiledModel.cs  LiteRtEnvironment.cs  LiteRtException.cs  LiteRtModel.cs  LiteRtRankedTensorType.cs  LiteRtTensorBuffer.cs  NativeLibraryResolver.cs  NativeRuntime.cs
src/LiteRT.Gpu.Metal/: LiteRT.Gpu.Metal.csproj
src/LiteRT.Gpu.Metal.Native/: LiteRT.Gpu.Metal.Native.csproj
src/LiteRT.Gpu.Native/: LiteRT.Gpu.Native.csproj
src/LiteRT.Gpu.OpenCl/: LiteRT.Gpu.OpenCl.csproj
src/LiteRT.Gpu.OpenCl.Native/: LiteRT.Gpu.OpenCl.Native.csproj
src/LiteRT.Gpu.WebGpu/: LiteRT.Gpu.WebGpu.csproj
src/LiteRT.Gpu.WebGpu.Native/: LiteRT.Gpu.WebGpu.Native.csproj
src/LiteRT.LM/: LiteRT.LM.csproj  LlmConversation.cs  LlmConversationOptions.cs  LlmEngine.cs  LlmMessage.cs  LlmSession.cs  NativeAccelerators.cs
src/LiteRT.LM.Native/: LiteRT.LM.Native.csproj
src/LiteRT.LM/Interop/: LiteRtLmNative.cs  MonoPInvokeCallbackAttribute.cs  StreamCallbackBridge.cs
src/LiteRT.Native/: LiteRT.Native.csproj
src/LiteRT.Unity/: package.json
src/LiteRT.Unity/Editor/: LiteRtPostprocessBuild.cs
src/LiteRT.Unity/Runtime/: LiteRT.Unity.asmdef  LiteRtModelLoader.cs  LiteRtNativeLibrary.cs
src/LiteRT.Unity/Runtime/Bindings/: LiteRT.Managed.asmdef  LiteRtEnvironment.cs  LiteRtTensorBuffer.cs
src/LiteRT/Interop/: LiteRtNative.cs
unity/LiteRT/: CHANGELOG.md  README.md  package.json
unity/LiteRT.LM/: CHANGELOG.md  README.md  package.json
unity/LiteRT.LM/Editor/: LiteRT.LM.Editor.asmdef  LiteRtLmPostprocessBuild.cs
unity/LiteRT.LM/Runtime/: LiteRT.LM.Unity.asmdef  LiteRtLmNativeLibrary.cs
unity/LiteRT.LM/Runtime/Bindings/: LiteRT.LM.asmdef  LlmConversationOptions.cs  LlmEngine.cs  LlmMessage.cs  LlmSession.cs  NativeAccelerators.cs
unity/LiteRT.LM/Runtime/Bindings/Interop/: LiteRtLmNative.cs  StreamCallbackBridge.cs
unity/LiteRT.Unity/: CHANGELOG.md  README.md  package.json
unity/LiteRT.Unity/Resources/com.koki-ibukuro.litert.unity/: TextureToNativeTensorFloat32.compute
unity/LiteRT.Unity/Runtime/: LiteRT.Unity.Extras.asmdef  LiteRtModelLoader.cs  RemoteFile.cs
unity/LiteRT.Unity/Runtime/Vision/: AspectMode.cs  BaseVisionTask.cs  FilePopupAttribute.cs  RectExtension.cs  TextureToNativeTensor.cs  TextureToNativeTensorDataTypes.cs
unity/LiteRT/Editor/: LiteRT.Unity.Editor.asmdef  LiteRtPostprocessBuild.cs  XcFrameworkEmbedUtility.cs
unity/LiteRT/Runtime/: LiteRT.Unity.asmdef  LiteRtNativeLibrary.cs
unity/LiteRT/Runtime/Bindings/: AssemblyInfo.cs  LiteRtCompiledModel.cs  LiteRtEnvironment.cs  LiteRtException.cs  LiteRtModel.cs  LiteRtRankedTensorType.cs
unity/LiteRT/Runtime/Bindings/Interop/: LiteRtNative.cs
