# Wraps the LiteRT-LM C API (//c:engine) into a self-contained shared library.
# Copied into a LiteRT-LM checkout as //litert_lm_dotnet/BUILD by build.sh.
# //c:engine is alwayslink, so its exports survive; the LiteRT core runtime is statically linked in.

load("@build_bazel_rules_apple//apple:apple.bzl", "apple_xcframework")

cc_binary(
    name = "LiteRtLmC",
    linkopts = select({
        # Upstream //c:litert-lm flags + explicit 16 KB max-page-size for 16 KB-page Android devices.
        "@platforms//os:android": [
            "-Wl,--no-undefined",
            "-Wl,--strip-all",
            "-Wl,--gc-sections",
            "-Wl,-Bsymbolic",
            "-Wl,-rpath,$$ORIGIN",
            "-Wl,-z,max-page-size=16384",
        ],
        "//conditions:default": [],
    }),
    linkshared = 1,
    visibility = ["//visibility:public"],
    deps = [
        "//c:engine",
    ],
)

# iOS: a loose dylib can't be embedded/signed on device, so ship a dynamic xcframework.
cc_library(
    name = "LiteRtLmC_lib",
    hdrs = [
        "//c:engine.h",
        "//schema/capabilities:capabilities_c.h",
    ],
    deps = [
        "//c:engine",
        "//schema/capabilities:capabilities_c",
    ],
)

apple_xcframework(
    name = "LiteRtLmC_xcframework",
    bundle_id = "com.koki-ibukuro.litertlm.LiteRtLmC",
    bundle_name = "LiteRtLmC",
    # Export ONLY litert_lm_*: leaked LiteRt* exports can hijack the core package's __Internal P/Invoke.
    exported_symbols_lists = ["exported_symbols.lds"],
    features = ["exported_symbols"],
    infoplists = ["Info.plist"],
    ios = {
        "device": ["arm64"],
        "simulator": ["arm64"],
    },
    minimum_os_versions = {
        "ios": "15.0",
    },
    public_hdrs = [
        "//c:engine.h",
        "//schema/capabilities:capabilities_c.h",
    ],
    deps = [
        ":LiteRtLmC_lib",
    ],
)
